_assets/css/custom/mobile.scss
.toc-mobile-wrapper li {
  border-bottom: solid 1px $grey-color-dark;
  padding: 0.75rem 0;
}

.cigi-logo-mobile {
  width: 50px;
}

@media (max-width: $small-phone - 0.01em) {
  section {
    background: $background-color;
    border-bottom: solid 1px $grey-color-dark;
  }

  #main-tabs {
    display: none;
  }

  .site-header {
    background: $background-color;
    box-shadow: 0 0 1rem 1px $grey-25;
  }

  .sidebar,
  .navigation-top-button,
  .navigation-bottom-button {
    display: none;
  }

  .download {
    a {
      margin-top: 0;
    }
  }

  .toc-mobile-wrapper {
    background: black;
    color: white;
    height: 100vh;
    left: 0;
    overflow: auto;
    position: fixed;
    top: 0;
    width: 100vw;

    a {
      color: white;
      text-decoration: none;
    }

    ul {
      font-size: 1em;
      list-style: none;
      padding: 4em 1em 0;

      li:first-child {
        display: none;
      }

    }
  }

  #timeline-slide-content,
  #timeline-filters {
    display: none;
  }

  h1 {
    font-size: 2em !important;
    line-height: 1.25em !important;
  }

  .landing,
  .timeline-slide {
    min-height: 100vh;
  }

  .timeline-slide,
  .financials,
  .standard-slide {
    padding-top: 3rem;
  }

  .mobile-button {
    background: $accent-color;
    border-radius: 50%;
    bottom: 20px;
    box-shadow: 0 0 0.5rem $grey-25;
    color: white;
    font-size: 2em;
    padding: 2px 10px 5px;
    position: fixed;
    right: 20px;
    z-index: 1;
  }

  .explore,
  .fullscreen-bg-video {
    display: none;
  }

  .img-container {
    img {
      padding-bottom: 0.5rem;
    }
  }

  .photo-caption {
    margin: 0;
    order: 0;

    &::before {
      display: none;
    }
  }
}

@media (min-width: $small-phone) {
  .cigi-logo-mobile,
  .toc-close-mobile,
  .toc-open-mobile {
    display: none;
  }

  .slide-3,
  .slide-10,
  .slide-11,
  .slide-12,
  .slide-13 {
    .img-container > img {
      display: none;
    }
  }

  .img-container {
    img {
      height: 100vh;
      left: 0;
      object-fit: cover;
      position: absolute;
      top: 0;
      width: 100vw;
    }
    &::before {
      background: linear-gradient(to right, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.55));
      content: ' ';
      display: block;
      height: 100%;
      left: 0;
      opacity: 1;
      position: absolute;
      top: 0;
      width: 100%;
      z-index: 1;
    }
  }

  .slide-content > :not(.img-container) {
    position: relative;
    z-index: 2;
  }
}

